Update MySQL connector